# stoffelMPC

./: Cargo.toml  README.md
.github/workflows/: lint.sh  rust.yml
blockchain/: Cargo.toml
compiler/: Cargo.toml
compiler/parser/: lib.rs  stoffel_lang.pest
compiler/parser/errors/: lib.rs
compiler/src/: lib.rs
compiler/src/parser/: mod.rs  stoffel_lang.pest
compiler/src/parser/errors/: mod.rs
examples/: README.md
examples/stoffel/: hbs.stf  hbs1.stf  hbs2.stf
instructions/: Cargo.toml
instructions/src/: lib.rs
mpc/: Cargo.toml
mpc/src/: lib.rs  player.rs  share.rs  utils.rs
mpc/src/protocols/: hbmpc.rs  honey_badger.rs  mod.rs
mpc/src/protocols/honey_badger/: honey_badger_notes.md  mod.rs
mpc/src/types/: int.rs  mod.rs  shamir.rs
mpc/src/types/int/: mod.rs  shamir.rs
mwrc/: Cargo.toml
mwrc/src/: main.rs
mwrc/src/cli/: mod.rs
mwrc/src/cli/commands/: build.rs  clean.rs  init.rs  run.rs  test.rs
player/: Cargo.toml
player/src/: main.rs
src/: instructions.rs  main.rs  types.rs  vm.rs
src/types/: mod.rs  public.rs  secret.rs
types/: Cargo.toml
types/src/: circuit.rs  compiler.rs  int.rs  lib.rs  utils.rs  vm.rs
types/src/circuit/: arithmetic.rs  boolean.rs  mod.rs
types/src/compiler/: bit.rs  fixed.rs  float.rs  mod.rs
types/src/compiler/int/: ark_integer.rs  mod.rs
types/src/int/: mod.rs  shamir.rs
types/src/numbers/: bit.rs  fixed.rs  float.rs  gf2.rs  int.rs  mod.rs  shamir.rs
types/src/numbers/int/: ark_integer.rs  mod.rs
types/src/numbers/secret_sharing/: mod.rs  shamir.rs
types/src/vm/: ark.rs  mod.rs  mpc.rs  number.rs
vm/: Cargo.toml
vm/src/: error.rs  instructions.rs  lib.rs  main.rs  processor.rs  program.rs  register.rs  schedule.rs  state.rs  stoffel_vm.rs
vm/src/instruction/: boolean.rs  opcodes.rs
vm/src/instructions/: arithmetic.rs  boolean.rs  common.rs  mod.rs  opcodes.rs
vm/src/processor/: arithmetic.rs  boolean.rs  mod.rs
vm/src/processors/: arithmetic.rs  boolean.rs  mod.rs  processor.rs
zkp/: Cargo.toml
