[workspace]
members = [
    "vm",
    "compiler",
    "mpc",
    "types",
    "zkp",
    "blockchain",
    "player"
]

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "b7b988f" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", rev = "b7b988f" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", rev = "b7b988f" }
