[workspace]
members = [
    "vm",
    "compiler",
    "mpc",
    "types",
    "zkp",
    "blockchain",
    "player"
]

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
