[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {path = "../types"}
rand = "0.8"
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
num-bigint = "0.4"