[package]
name = "types"
version = "0.1.0"
authors = ["Mikerah <mikerah@hashcloak.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", rev = "d9527c8" }
thiserror = "1"
num-bigint = "0.4"
