[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {path = "../types"}

futures = { version = "0.3" }
tokio = {version = "0.2", features = ["full"] }
ark-ff = "0.3"
ark-poly = "0.3"
ark-ec = "0.3"
once_cell = "1.9"
