[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {path = "../types"}
mpc = {path = "../mpc"}
futures = { version = "0.3" }
tokio = {version = "0.2", features = ["full"] }
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4"
ark-bls12-381 = "0.4.0"
num-bigint = "0.4.4"
